# open-connect

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: ci.yml
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs
crates/agent-config/: Cargo.toml
crates/agent-config/src/: lib.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs
crates/agent-engine/: Cargo.toml
crates/agent-engine/src/: lib.rs
crates/agent-nats/: Cargo.toml
crates/agent-nats/src/: lib.rs
crates/agent-primitives/: Cargo.toml
crates/agent-primitives/src/: lib.rs
crates/agent-rollback/: Cargo.toml
crates/agent-rollback/src/: lib.rs
crates/manifest-verifier/: Cargo.toml
crates/manifest-verifier/src/: lib.rs
db/migrations/: 0001_initial.down.sql  0001_initial.up.sql
device-profiles/yocto-wic-ab/: flash-wic-to-bank.sh  post-boot-health-check.sh  restore-grubenv.sh  update-grubenv.sh
docs/: README.md
docs/adr/: ADR-0001-nats-over-http-rest.md  ADR-0002-rust-for-edge-agent.md  ADR-0003-jws-ed25519-manifests.md  ADR-0004-ab-partitioning-grubenv.md  ADR-0005-pull-based-claim-model.md  ADR-0006-selinux-strict-policy.md  ADR-0007-protobuf-contracts.md  ADR-0008-config-driven-primitive-engine.md  ADR-0009-nats-nkey-authentication.md  ADR-0010-anti-rollback-enforcement.md  ADR-0011-offline-bundle-format.md  README.md
docs/arc42/: 01-introduction-and-goals.md  02-architecture-constraints.md  03-system-scope-and-context.md  04-solution-strategy.md  05-building-block-view.md  06-runtime-view.md  07-deployment-view.md  08-crosscutting-concepts.md  09-architectural-decisions.md  10-quality-requirements.md  11-risks-and-technical-debt.md  12-glossary.md
docs/requirements/: README.md  functional.md  non-functional.md  traceability-matrix.md
docs/use-cases/: README.md  UC-01-ab-ota-medical.md  UC-02-ros2-modular-deploy.md  UC-03-cicd-hil-claiming.md
plans/: README.md  milestone-plan.md
proto/manifest/v1/: manifest.schema.json
proto/otap/v1/: otap.proto
scripts/: lint-device-profile-scripts.sh
services/control-plane/cmd/control-plane/: main.go
services/control-plane/cmd/oc/: main.go
services/control-plane/cmd/oc-sign/: main.go
services/control-plane/internal/api/: server.go  server_test.go
services/control-plane/internal/claims/: service.go  service_test.go
services/control-plane/internal/clock/: clock.go
services/control-plane/internal/devices/: store.go  store_test.go
services/control-plane/internal/httperr/: problem.go
services/control-plane/internal/nats/: publisher.go
services/control-plane/internal/rbac/: rbac.go  rbac_test.go
services/control-plane/internal/signing/: jws.go  jws_test.go
testdata/keys/: README.md  release-mgr-2026-04.priv.pem  release-mgr-2026-04.pub.pem
testdata/manifests/: yocto-wic-v2.4.0.json
