[workspace]
resolver = "2"
members = [
    "crates/agent-core",
    "crates/agent-nats",
    "crates/agent-config",
    "crates/agent-cli",
    "crates/agent-engine",
    "crates/agent-rollback",
    "crates/agent-primitives",
    "crates/manifest-verifier",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "process", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"
ed25519-dalek = { version = "2", default-features = false, features = ["std", "pem"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
parking_lot = "0.12"
toml = "0.8"
