[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Edge-agent state machine (arc42 §5.7.1)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
