[package]
name = "agent-engine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Config-driven execution engine (arc42 §5.4.3, ADR-0008)."

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
agent-primitives = { path = "../agent-primitives" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
