[package]
name = "agent-nats"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "NATS abstraction for the edge agent (real adapter is a follow-up)."

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros"] }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
