[package]
name = "agent-primitives"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Primitive trait + reference primitives (FILE_TRANSFER, SCRIPT_EXECUTION, REBOOT)."

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "io-util", "time", "macros", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
