[package]
name = "manifest-verifier"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Open-Connect JWS / EdDSA / JCS manifest verifier (arc42 §5.8)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
